lintian (2.5.56) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/binaries.desc:
    + [CL] Apply patch from Adrian Bunk to mention the lack of the "-g"
      flag as a common cause for the debug-file-with-no-debug-symbols tag.
      (Closes: #878806)
  * checks/changes-file.desc:
    + [CL] Add a note to orig-tarball-missing-upstream-signature regarding
      support in pristine-tar and git-buildpackage.
  * checks/conffiles.pm, checks/{debconf,files,scripts}.desc:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to fix a
      number of spelling mistakes.  (Closes: #878446)
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      a number of manual references.  (Closes: #878517)
  * checks/debconf.desc:
    + [CL] Apply patch from Ville Skyttä <ville.skytta@iki.fi> to update
      the debconf-spec refs.  (Closes: #878449)
  * checks/debhelper.{desc,pm}:
    + [NT] Add check for using using the debhelper tooling from the
      autotools-dev package.  These have been replaced by the changes
      inside debhelper itself.
    + [NT] Avoid useless-autoreconf-build-depends for autotools-dev when
      the autotools-dev tooling is used in debian/rules.
      (Closes: #871711)
  * checks/fields.pm:
    + [CL] Apply patch from Nicolas Boulenguez to accept and recommend the
      new vcs-mtn mtn:// uri format.  (Closes: #878798)
  * checks/init.d.pm:
    + [CL] Check for files that use content from the /etc/init.d/skeleton
      template. Thanks to Christoph Biedl for the idea.  (Closes: #879152)
  * checks/md5sums.pm:
    + [CL] Allow empty md5sums files.  (Closes: #781372)
  * checks/source-changelog.{desc.pm}:
    + [CL] Move latest-debian-changelog-entry-without-new-date tag into a
      new check of type "source".  (Closes: #873612)
  * checks/watch-file.pm:
    + [CL] Include the offending URI in debian-watch-uses-insecure-uri
      output, not the line number.