@@ -38,3 +38,10 @@ Ref: https://wiki.debian.org/AppStream/Guidelines
 Info: The modalias matching rule in the AppStream metadata file is
  malformed.  Hexadecimal numbers in vendor and product IDs must be
  upper case.
+
+Tag: appstream-metadata-invalid
+Severity: serious
+Certainty: certain
+Ref: https://wiki.debian.org/AppStream/Guidelines
+Info: The specified AppStream metadata file does not consist of
+ valid XML.
