@@ -11,4 +11,5 @@ UDEV_DIR=$(DESTDIR)/lib/udev/rules.d/
 override_dh_install:
 	dh_install
 	install -m 0644 debian/appstream-metadata.metadata.xml $(APPSYNC_DIR)
+	install -m 0644 debian/appstream-metadata-invalid.metadata.xml $(APPSYNC_DIR)
 	install -m 0644 debian/appstream-metadata-obsolete.metadata.xml $(OBSOLETE_APPSYNC_DIR)
